--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "formidable": "^2.1.1",
     "js-cookie": "^3.0.1",
     "next": "13.2.3",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/formidable": "^2.0.5",
     "@types/js-cookie": "^3.0.3"
   }
 }
