--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.2.3",
     "formidable": "^2.1.1",
     "js-cookie": "^3.0.1",
+    "multiparty": "^4.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/formidable": "^2.0.5",
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/multiparty": "^0.0.33"
   }
 }
